Update Jenkinsfile : add -a option helm ls; update file deployment-develop.yaml dele "

--- a/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/deployment.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/deployment.yaml
@@ -15,7 +15,7 @@ spec:
   template:
     metadata:
       labels:
-        app: { .Release.Name }}
+        app: {{ .Release.Name }}
         environment: {{ .Values.environment | quote }}
     spec:
       imagePullSecrets:
