--- a/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/secret.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/secret.yaml
@@ -3,8 +3,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cast-fastapi-web-secret
-  namespace: develop
+  name: {{ .Release.Name }}
+  namespace: {{ .Values.environment | quote }}
 type: Opaque
 data:
   cast-db-postgres-url: {{ .Values.cast_fastapi_web.cast_db_postgres_url }}
