--- a/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/service.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/service.yaml
@@ -3,14 +3,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cast-fastapi-web-{{ .Release.Name }}
+  name: {{ .Release.Name }}
 spec:
   type: ClusterIP
   selector:
     matchLabels:
-      app: cast-fastapi-web-{{ .Release.Name }}
+      app: {{ .Release.Name }}
   ports:
     - port: 5000
   selector:
-    app: cast-fastapi-web-{{ .Release.Name }}
+    app: {{ .Release.Name }}
 ---
