--- a/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/secret.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/secret.yaml
@@ -1,4 +1,4 @@
-# /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins/dm-jenkins-cpa/cast-service/helm/cast-db/templates/secrets.yaml---
+# /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/secret.yaml
 #templates/secret.yaml
 apiVersion: v1
 kind: Secret
