--- a/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/service.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/service.yaml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Release.Name }}
+  namespace: {{ .Values.environment | quote }}
 spec:
   type: ClusterIP
   selector:
