--- a/dm-jenkins-cpa/cast-service/helm/cast-fastapi/values-develop.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-fastapi/values-develop.yaml
@@ -6,11 +6,13 @@
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 # replicaCount: 1
 environment: develop
-image:
+cast_fastapi:
+  repository: "cpa8876/casts-ds-fastapi-develop"
+  tag: "latest"
 #  secretpullimage: gitlab-registry-secret
 #  web: "registry.gitlab.com/datascientest_project/fastapi_traefik/fastapi_web_test:latest"
 #  cast_db: "postgres:15-alpine"
-  cast_fastapi_web: "cpa8876/casts-ds-fastapi-develop:latest"
+#  cast_fastapi_web: "cpa8876/casts-ds-fastapi-develop:latest"
 #  traefik: "registry.gitlab.com/datascientest_project/fastapi_traefik/traefik:latest"
 
 
