--- a/dm-jenkins-cpa/movie-service/helm/movie-db/values-develop.yml
+++ b/dm-jenkins-cpa/movie-service/helm/movie-db/values-develop.yml
@@ -5,7 +5,7 @@
 
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicaCount: 1
-environment: test
+environment: develop
 image:
 #  secretpullimage: gitlab-registry-secret
 #  web: "registry.gitlab.com/datascientest_project/fastapi_traefik/fastapi_web_test:latest"
@@ -14,12 +14,21 @@ image:
 #  traefik: "registry.gitlab.com/datascientest_project/fastapi_traefik/traefik:latest"
 
 
+#movie_db_postgresql:
+  # user: ZmFzdGFwaV91c2Vy       # echo fastapi_user  :=> fastapi_user
+  # password: ZmFzdGFwaV9wYXNzd2Q=   # echo fastapi_passwd  :=> fastapi_passwd
+  # database: ZmFzdGFwaV9kYg==       # echo fastapi_db  :=> fastapi_db
+  # image: postgres:15
+  # replicas: 1
+
 movie_db_postgresql:
-  user: ZmFzdGFwaV91c2Vy       # echo fastapi_user  :=> fastapi_user
-  password: ZmFzdGFwaV9wYXNzd2Q=   # echo fastapi_passwd  :=> fastapi_passwd
-  database: ZmFzdGFwaV9kYg==       # echo fastapi_db  :=> fastapi_db
+  user: bW92aWVfZmFzdGFwaV91c2VyX2RldmVsb3A=          # echo $(echo -n "movie_fastapi_user_develop" | base64) -  bW92aWVfZmFzdGFwaV91c2VyX2RldmVsb3A=
+  password: bW92aWVfZmFzdGFwaV9wYXNzd29yZF9kZXZlbG9w  # echo $(echo -n "movie_fastapi_password_develop" | base64) - bW92aWVfZmFzdGFwaV9wYXNzd29yZF9kZXZlbG9w
+  database: ZmFzdGFwaV9kYg==                          # echo $(echo -n "movie_fastapi_db_develop" | base64) - bW92aWVfZmFzdGFwaV9kYl9kZXZlbG9w
   image: postgres:15
   replicas: 1
+
+
 
 services:
   movie_db:
