--- a/dm-jenkins-cpa/movie-service/helm/movie-fastapi/values-develop.yaml
+++ b/dm-jenkins-cpa/movie-service/helm/movie-fastapi/values-develop.yaml
@@ -16,7 +16,7 @@ movie_fastapi:
 #  traefik: "registry.gitlab.com/datascientest_project/fastapi_traefik/traefik:latest"
 
 movie_fastapi_web_develop:
-  movie_db_postgres_url_develop: cG9zdGdyZXNxbDovL2Zhc3RhcGlfdXNlcjpmYXN0YXBpX3Bhc3N3ZEBjYXN0LWRiLXNlcnZpY2UvZmFzdGFwaV9kYg==   #echo $(echo -n "postgresql://movie_fastapi_user_develop:movie_fastapi_password_develop@cast-db-service/movie_fastapi_db_develop" | base64) - cG9zdGdyZXNxbDovL21vdmllX2Zhc3RhcGlfdXNlcl9kZXZlbG9wOm1vdmllX2Zhc3RhcGlfcGFz c3dvcmRfZGV2ZWxvcEBjYXN0LWRiLXNlcnZpY2UvbW92aWVfZmFzdGFwaV9kYl9kZXZlbG9w
+  movie_db_postgres_url_develop: cG9zdGdyZXNxbDovL21vdmllX2Zhc3RhcGlfdXNlcl9kZXZlbG9wOm1vdmllX2Zhc3RhcGlfcGFz c3dvcmRfZGV2ZWxvcEBtb3ZpZS1kYi1zZXJ2aWNlL21vdmllX2Zhc3RhcGlfZGJfZGV2ZWxvcA==   #echo $(echo -n "postgresql://movie_fastapi_user_develop:movie_fastapi_password_develop@movie-db-service/movie_fastapi_db_develop" | base64) - cG9zdGdyZXNxbDovL21vdmllX2Zhc3RhcGlfdXNlcl9kZXZlbG9wOm1vdmllX2Zhc3RhcGlfcGFz c3dvcmRfZGV2ZWxvcEBtb3ZpZS1kYi1zZXJ2aWNlL21vdmllX2Zhc3RhcGlfZGJfZGV2ZWxvcA==
   replicas: 1
 
 
