Update chart helm movie-db values-develop.yml to personnalize credentials access database movie_db :

--- a/dm-jenkins-cpa/cast-service/helm/cast-db/templates/secrets.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/templates/secrets.yaml
@@ -3,10 +3,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cast-db-postgres-secret
+  name: cast-db-secret
   namespace: develop
 type: Opaque
 data:
-  postgresql-user: {{ .Values.cast_db_postgresql.user }}
-  postgresql-password: {{ .Values.cast_db_postgresql.password }}
-  postgresql-database: {{ .Values.cast_db_postgresql.database }}
+  user: {{ .Values.cast_db.user }}
+  password: {{ .Values.cast_db.password }}
+  database: {{ .Values.cast_db.database }}
