--- a/dm-jenkins-cpa/cast-service/helm/cast-db/templates/statfulset.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/templates/statfulset.yaml
@@ -4,9 +4,9 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: cast-db-postgres
-#  namespace: dev
+  namespace: {{ .Values.environment }}
 spec:
-  replicas:  {{ .Values.cast_db_postgresql.replicas }}
+  replicas:  {{ .Values.cast_db.replicas }}
   selector:
     matchLabels:
       app: cast-db-{{ .Release.Name }}
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: cast-db
-          image: {{ .Values.cast_db_postgresql.image }}
+          image: {{ .Values.cast_db.image }}
           ports:
             - containerPort: 5432
               name: cast-db
@@ -26,18 +26,18 @@ spec:
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
-                  name:  cast-db-postgres-secret
-                  key: postgresql-user
+                  name:  cast-db-secret
+                  key: user
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name:  cast-db-postgres-secret
-                  key: postgresql-password
+                  name:  cast-db-secret
+                  key: password
             - name: POSTGRES_DB
               valueFrom:
                 secretKeyRef:
-                  name:  cast-db-postgres-secret
-                  key: postgresql-database
+                  name:  cast-db-secret
+                  key: database
           volumeMounts:
             - name: pgdata
               mountPath: /var/lib/postgresql/data
