Update chart helm cast-fastapi values-develop.yml and ./template/deployment.yaml files : Replace .Values.image.cast_fastapi_web BY .Values.cast_fastapi.repository \}\}:\{\{ .Values.cast_fastapi.tag

--- a/dm-jenkins-cpa/cast-service/helm/cast-db/templates/secrets.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/templates/secrets.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cast-db-secret
+  name: {{ .Release.Name }}
   namespace: develop
 type: Opaque
 data:
