--- a/dm-jenkins-cpa/movie-service/helm/movie-db/templates/secrets.yaml
+++ b/dm-jenkins-cpa/movie-service/helm/movie-db/templates/secrets.yaml
@@ -3,11 +3,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: movie-db-postgres-secret
+  name: {{ .Release.Name }}
   namespace: develop
 type: Opaque
 data:
-  postgresql-user: {{ .Values.movie_db_postgresql.user }}
-  postgresql-password: {{ .Values.movie_db_postgresql.password }}
-  postgresql-database: {{ .Values.movie_db_postgresql.database }}
+  postgresql-user: {{ .Values.movie_db.user }}
+  postgresql-password: {{ .Values.movie_db.password }}
+  postgresql-database: {{ .Values.movie_db.database }}
   
