Update chart helm cast-fastapi values-develop.yml and ./template/deployment.yaml files : Replace .Values.image.cast_fastapi_web BY .Values.cast_fastapi.repository \}\}:\{\{ .Values.cast_fastapi.tag

--- a/dm-jenkins-cpa/cast-service/helm/cast-db/templates/statfulset.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/templates/statfulset.yaml
@@ -3,7 +3,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: cast-db-postgres
+  name: {{ .Release.Name }}
   namespace: {{ .Values.environment }}
 spec:
   replicas:  {{ .Values.cast_db.replicas }}
