Correct second time the error indentation of values-develop.yaml: error converting YAML to JSON: yaml: line 9:

--- a/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/service.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/service.yaml
@@ -11,7 +11,7 @@ spec:
     matchLabels:
       app: {{ .Release.Name }}
   ports:
-    - port: 5000
+    - port: {{ .Values.services.cast_fastapi.port }}
   selector:
     app: {{ .Release.Name }}
 ---
