--- a/dm-jenkins-cpa/cast-service/helm/cast-db/templates/service.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/templates/service.yaml
@@ -3,10 +3,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cast-db-service-{{ .Release.Name }}
+  name: {{ .Release.Name }}
 spec:
   ports:
     - port: 5432
   selector:
-    app: cast-db-service-{{ .Release.Name }}
+    app: {{ .Release.Name }}
 ---
