--- a/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/service.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/service.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}
+  name: cast-fastapi-service
   namespace: {{ .Values.environment | quote }}
 spec:
   type: ClusterIP
