--- a/dm-jenkins-cpa/cast-service/helm/cast-db/templates/statfulset.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/templates/statfulset.yaml
@@ -9,19 +9,18 @@ spec:
   replicas:  {{ .Values.cast_db.replicas }}
   selector:
     matchLabels:
-      app: cast-db-{{ .Release.Name }}
+      app: {{ .Release.Name }}-app
   template:
     metadata:
       labels:
-        app: cast-db-{{ .Release.Name }}
+        app: {{ .Release.Name }}-app
         environment: {{ .Values.environment | quote }}
     spec:
       containers:
-        - name: cast-db
+        - name: {{ .Release.Name }}-app
           image: {{ .Values.cast_db.image }}
           ports:
             - containerPort: 5432
-              name: cast-db
           env:
             - name: POSTGRES_USER
               valueFrom:
