--- a/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/deployment.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/deployment.yaml
@@ -12,17 +12,17 @@ spec:
   replicas: {{ .Values.cast_fastapi.replicas }}
   selector:
     matchLabels:
-      app: {{ .Release.Name }}
+      app: {{ .Release.Name }}-app
   template:
     metadata:
       labels:
-        app: {{ .Release.Name }}
+        app: {{ .Release.Name }}-app
         environment: {{ .Values.environment | quote }}
     spec:
       #imagePullSecrets:
       #  - name: {{ .Values.image.cast_fastapi }}
       containers:
-        - name: {{ .Release.Name }}
+        - name: {{ .Release.Name }}-app
           image: "{{ .Values.cast_image.repository }}:{{ .Values.cast_image.tag | default .Chart.AppVersion }}"
           command: ["/bin/sh"]     # https://kubernetes.io/docs/tasks/inject-data-application/define-command-argument-container/
           args: ["-c", "while true; do cd /app; uvicorn app.main:app --reload --host 0.0.0.0 --port 5001;done"]
