replace  [selector:    app: cast-db-{{ .Release.Name }}] §BY [selector:    app: \{\{ .Release.Name \}\}-app ] for cast-fastapi-develop

--- a/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/service.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/service.yaml
@@ -13,5 +13,5 @@ spec:
   ports:
     - port: {{ .Values.services.cast_fastapi.port }}
   selector:
-    app: {{ .Release.Name }}
+    app: {{ .Release.Name }}-app
 ---
