--- a/dm-jenkins-cpa/movie-service/helm/movie-fastapi/templates/deployment.yaml
+++ b/dm-jenkins-cpa/movie-service/helm/movie-fastapi/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
       #  - name: {{ .Values.image.movie_fastapi }}
       containers:
         - name: {{ .Release.Name }}-app
-          image: "{{ .Values.movie_fastapi_image.repository }}:{{ .Values.movie_fastapi_image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.movie_image.repository }}:{{ .Values.movie_image.tag | default .Chart.AppVersion }}"
           command: ["/bin/sh"]     # https://kubernetes.io/docs/tasks/inject-data-application/define-command-argument-container/
           args: ["-c", "while true; do cd /app; uvicorn app.main:app --reload --host 0.0.0.0 --port 5000;done"]
           ports:
