--- a/dm-jenkins-cpa/movie-service/helm/movie-db/templates/service.yaml
+++ b/dm-jenkins-cpa/movie-service/helm/movie-db/templates/service.yaml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: movie-db-service
+  namespace: {{ .Values.environment | quote }}
 spec:
   ports:
     - port: 5432
