--- a/dm-jenkins-cpa/movie-service/helm/movie-db/templates/statfulset.yaml
+++ b/dm-jenkins-cpa/movie-service/helm/movie-db/templates/statfulset.yaml
@@ -9,14 +9,14 @@ spec:
   replicas:  {{ .Values.movie_db.replicas }}
   selector:
     matchLabels:
-      app: movie-db-{{ .Release.Name }}
+      app: {{ .Release.Name }}-app
   template:
     metadata:
       labels:
-        app: movie-db-{{ .Release.Name }}
+        app: {{ .Release.Name }}-app
     spec:
       containers:
-        - name: movie-db
+        - name: {{ .Release.Name }}-app
           image: {{ .Values.movie_db.image }}
           ports:
             - containerPort: 5432
