--- a/dm-jenkins-cpa/movie-service/helm/movie-db/templates/secrets.yaml
+++ b/dm-jenkins-cpa/movie-service/helm/movie-db/templates/secrets.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: develop
 type: Opaque
 data:
-  postgresql-user: {{ .Values.movie_db.user }}
-  postgresql-password: {{ .Values.movie_db.password }}
-  postgresql-database: {{ .Values.movie_db.database }}
+  user: {{ .Values.cast_db.user }}
+  password: {{ .Values.cast_db.password }}
+  database: {{ .Values.cast_db.database }}
   
