--- a/dm-jenkins-cpa/movie-service/helm/movie-db/templates/secrets.yaml
+++ b/dm-jenkins-cpa/movie-service/helm/movie-db/templates/secrets.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: develop
 type: Opaque
 data:
-  user: {{ .Values.cast_db.user }}
+  user: {{ .Values.movie_db.user }}
   password: {{ .Values.cast_db.password }}
   database: {{ .Values.cast_db.database }}
   
