update secrezts.yaml fo chrt helm movie-db-develop : Replace [ .Values.cast_db.user] BY [ .Values.movie_db.user]

--- a/dm-jenkins-cpa/movie-service/helm/movie-db/templates/secrets.yaml
+++ b/dm-jenkins-cpa/movie-service/helm/movie-db/templates/secrets.yaml
@@ -8,6 +8,6 @@ metadata:
 type: Opaque
 data:
   user: {{ .Values.movie_db.user }}
-  password: {{ .Values.cast_db.password }}
-  database: {{ .Values.cast_db.database }}
+  password: {{ .Values.movie_db.password }}
+  database: {{ .Values.movie_db.database }}
   
