Update Jenkinsfile : add cmd lines to deploy and test chart helm nginx-chart

--- a/dm-jenkins-cpa/web/helm/nginx-chart/templates/deployment.yaml
+++ b/dm-jenkins-cpa/web/helm/nginx-chart/templates/deployment.yaml
@@ -1,3 +1,4 @@
+# /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins/dm-jenkins-cpa/web/helm/nginx-chart/templates/deployment.yaml
 #  Minikube_B09) Deploying Nginx on Kubernetes: Exploring Various Methods > 7. Helm; Mastering Nginx Deployment in Kubernetes: A Comprehensive Guide to Pods, Deployments, and Beyond; Anvesh Muppeda; Anvesh Muppeda; 12 min read; Jan 13, 2024
 ## https://medium.com/@muppedaanvesh/deploying-nginx-on-kubernetes-a-quick-guide-04d533414967 
 ---
