--- a/dm-jenkins-cpa/web/helm/nginx-chart/templates/deployment.yaml
+++ b/dm-jenkins-cpa/web/helm/nginx-chart/templates/deployment.yaml
@@ -18,16 +18,16 @@ kind: Deployment
 metadata:
   name: {{ .Release.Name }}
   labels:
-    {{- include "nginx-chart.labels" . | nindent 4 }}
+     app: {{- include "nginx-chart.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      {{- include "nginx-chart.selectorLabels" . | nindent 6 }}
+      app: {{- include "nginx-chart.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        {{- include "nginx-chart.selectorLabels" . | nindent 8 }}
+         app: {{- include "nginx-chart.selectorLabels" . | nindent 8 }}
     spec:
       containers:
         - name: {{ .Chart.Name }}
@@ -48,5 +48,4 @@ spec:
          - name: nginx-config-volume
            configMap:
              name: nginx-config
-
 ---
