--- a/dm-jenkins-cpa/web/helm/nginx-chart/templates/service.yaml
+++ b/dm-jenkins-cpa/web/helm/nginx-chart/templates/service.yaml
@@ -17,7 +17,7 @@ kind: Service
 metadata:
   name: {{ .Release.Name }}-svc
   labels:
-    {{- include "nginx-chart.labels" . | nindent 4 }}
+    app: {{- include "nginx-chart.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -27,5 +27,5 @@ spec:
       name: http
       nodePort: {{ .Values.nodePort }}
   selector:
-    {{- include "nginx-chart.selectorLabels" . | nindent 4 }}
+    app: {{- include "nginx-chart.selectorLabels" . | nindent 4 }}
 ---
