Update _helper.tpl : delete bad copy paste values

--- a/dm-jenkins-cpa/web/helm/nginx-chart/templates/service.yaml
+++ b/dm-jenkins-cpa/web/helm/nginx-chart/templates/service.yaml
@@ -1,23 +1,9 @@
-# /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins/dm-jenkins-cpa/web/helm/nginx-chart/templates/service.yaml
-# ##########################
-# BIBLIO
-# #############
-#  Minikube_B09) Deploying Nginx on Kubernetes: Exploring Various Methods > 7. Helm; Mastering Nginx Deployment in Kubernetes: A Comprehensive Guide to Pods, Deployments, and Beyond; Anvesh Muppeda; Anvesh Muppeda; 12 min read; Jan 13, 2024
-## https://medium.com/@muppedaanvesh/deploying-nginx-on-kubernetes-a-quick-guide-04d533414967 
-# #############
-##  Minikube-B12-03)  TUTORIAL > How to Create and Deploy an NGINX Proxy Helm Chart on Kubernetes > How to Create and Deploy an NGINX Proxy Helm Chart on Kubernetes; Posted on 01 August 2024; 
-## https://vsys.host/how-to/how-to-create-and-deploy-an-nginx-proxy-helm-chart-on-kubernetes
-### 3. Update Service Template:
-#### This deployment makes use of the nginx image and configures the PROXY_URL environment variable according to the Helm value proxyUrl. It sets up the NGINX configuration by linking the ConfigMap to /etc/nginx/nginx.conf.
-# #############
-# ##########################
----
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-svc
+  name: {{ include "fastapi.fullname" . }}
   labels:
-    app: {{- include "nginx-chart.labels" . | nindent 4 }}
+    {{- include "fastapi.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -25,7 +11,5 @@ spec:
       targetPort: http
       protocol: TCP
       name: http
-      nodePort: {{ .Values.nodePort }}
   selector:
-    app: {{- include "nginx-chart.selectorLabels" . | nindent 4 }}
----
+    {{- include "fastapi.selectorLabels" . | nindent 4 }}
