--- a/dm-jenkins-cpa/web/helm/nginx-chart_Z20250712.1530/values.yaml
+++ b/dm-jenkins-cpa/web/helm/nginx-chart_Z20250712.1530/values.yaml
@@ -1,4 +1,7 @@
-# Default values for fastapi.
+#  Minikube_B09) Deploying Nginx on Kubernetes: Exploring Various Methods > 7. Helm; Mastering Nginx Deployment in Kubernetes: A Comprehensive Guide to Pods, Deployments, and Beyond; Anvesh Muppeda; Anvesh Muppeda; 12 min read; Jan 13, 2024
+## https://medium.com/@muppedaanvesh/deploying-nginx-on-kubernetes-a-quick-guide-04d533414967 
+---
+# Default values for nginx.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -12,6 +15,29 @@ image:
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
+  
+movieFastApiService:
+  host: movie-fastapi-service
+  port: 5000
+  path: /api/v1/movies
+
+castFastApiService:
+  host: cast-fastapi-service
+  port: 5001
+  path: /api/v1/casts
+
+
+server: {
+    listen 80;
+
+    location /api/v1/movies {
+        proxy_pass http://{{ .Values.movieFastApiService.host }}:{{ .Values.movieFastApiService.port }}{{ .Values.movieFastApiService.path }};
+    }
+
+    location /api/v1/casts {
+        proxy_pass http://{{ .Values.castFastApiService.host }}:{{ .Values.castFastApiService.port }}{{ .Values.castFastApiService.path }};
+    }
+}
 
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
@@ -52,7 +78,8 @@ securityContext: {}
 # This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
 service:
   # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
-  type: ClusterIP
+  #type: ClusterIP
+  type: NodePort
   # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
   port: 80
 
@@ -121,3 +148,5 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+---
