--- a/dm-jenkins-cpa/web/helm/nginx-chart/templates/service.yaml
+++ b/dm-jenkins-cpa/web/helm/nginx-chart/templates/service.yaml
@@ -1,6 +1,13 @@
 # /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins/dm-jenkins-cpa/web/helm/nginx-chart/templates/service.yaml
-# Minikube_B09) Deploying Nginx on Kubernetes: Exploring Various Methods > 7. Helm; Mastering Nginx Deployment in Kubernetes: A Comprehensive Guide to Pods, Deployments, and Beyond; Anvesh Muppeda; Anvesh Muppeda; 12 min read; Jan 13, 2024
+# ################################################################
+# ################################ BIBLIO
+# ################ # Minikube_B12-02) Deploying Nginx on Kubernetes: Exploring Various Methods > 7. Helm; Mastering Nginx Deployment in Kubernetes: A Comprehensive Guide to Pods, Deployments, and Beyond; Anvesh Muppeda; Anvesh Muppeda; 12 min read; Jan 13, 2024
 ## https://medium.com/@muppedaanvesh/deploying-nginx-on-kubernetes-a-quick-guide-04d533414967 
+################################
+################ #  Minikube_B12-03) How to Create and Deploy an NGINX Proxy Helm Chart on Kubernetes; Posted on 01 August 2024
+### https://vsys.host/how-to/how-to-create-and-deploy-an-nginx-proxy-helm-chart-on-kubernetes
+#### 3. Update Service Template:    Replace the content of `templates/service.yaml` with the following:
+# ################################################################
 ---
 apiVersion: v1
 kind: Service
@@ -15,6 +22,7 @@ spec:
       targetPort: http
       protocol: TCP
       name: http
+      nodePort: {{ .Values.nodePort }}
   selector:
     {{- include "nginx-chart.selectorLabels" . | nindent 4 }}
 ---
