--- a/dm-jenkins-cpa/web/helm/nginx-chart/templates/configmap.yaml
+++ b/dm-jenkins-cpa/web/helm/nginx-chart/templates/configmap.yaml
@@ -1,9 +1,9 @@
 # /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins/dm-jenkins-cpa/web/helm/nginx-chart/values-develop.yml
-# 
 # ################################################################
 # ################################ BIBLIO
-# ################ # Minikube_B12-02) Deploying Nginx on Kubernetes: Exploring Various Methods > 7. Helm; Mastering Nginx Deployment in Kubernetes: A Comprehensive Guide to Pods, Deployments, and Beyond; Anvesh Muppeda; Anvesh Muppeda; 12 min read; Jan 13, 2024
+# ################ # Minikube_B12-02) Deploying Nginx on Kubernetes: Exploring Various Methods,  Anvesh Muppeda; Anvesh Muppeda; 12 min read; Jan 13, 2024
 ## https://medium.com/@muppedaanvesh/deploying-nginx-on-kubernetes-a-quick-guide-04d533414967 
+### > 7. Helm; Mastering Nginx Deployment in Kubernetes: A Comprehensive Guide to Pods, Deployments, and Beyond;
 ################################
 ################ #  Minikube_B12-03) How to Create and Deploy an NGINX Proxy Helm Chart on Kubernetes; Posted on 01 August 2024
 ### https://vsys.host/how-to/how-to-create-and-deploy-an-nginx-proxy-helm-chart-on-kubernetes
