--- a/dm-jenkins-cpa/web/helm/nginx-chart/templates/configmap.yaml
+++ b/dm-jenkins-cpa/web/helm/nginx-chart/templates/configmap.yaml
@@ -26,5 +26,11 @@ metadata:
                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                proxy_set_header X-Forwarded-Proto $scheme;
            }
+            location /api/v1/movies {
+               proxy_pass http://{{ .Values.movieFastApiService.host }}:{{ .Values.movieFastApiService.port }}{{ .Values.movieFastApiService.path }};
+           }
+           location /api/v1/casts {
+               proxy_pass http://{{ .Values.castFastApiService.host }}:{{ .Values.castFastApiService.port }}{{ .Values.castFastApiService.path }};
+           }
        }
 ---
